    * CHANGE: BusyBox is now dynamic linked instead of static (more free space for other things)
    * CHANGE: MTD partitions mounting has been separated from rcS to rc.mount script
    * REMOVE: removed strace and ltrace binaries
    * REMOVE: libz.so.1.2.3 - libz.so* libs are now linked to /usr/local/lib/libz.so*

0.4.1:

    * FIX: ipla.cgi is now more tolerant for minor communication protocol changes
    * FIX: better place for vod apps logs/communication files: /tmp/vod/{ipla,tvp,netplayer}/

0.4.2:
    * FIX: installation log file handling - raised errors that can't make backup because couldn't save logs

0.4.3:
    * FIX: proper US firmware check
    * FIX: got rid bookmarks file caching (thanks gra3l)
    * FIX: install.sh could not make reboot TV after proper flashing on pure TVs giving garbage on console instead
    * FIX: install.sh mem requirements lowered for 3D TVs where's less available mem
    * FIX: install.sh kill konfabulator before installation to get more free memory
    * ADD: new NetCast web browser based links (from SmartTV NetCast 2.0) in Internet Browser page - 132 links currently compared to 68 before (by nicola_12345)

0.5.0:
    * FIX: workaround for network shares invisible dirs (thanks xren)
    * FIX: upgrade from zip file on USB storage device
    * FIX: ywe first time configuration
    * FIX: abc.net.au link fix
    * ADD: experimental support for SmartTV models
    * ADD: build and installation scripts can now handle 2011 BCM model images
    * ADD: support for KR 2010 BCM models
    * ADD: /scripts/readspeedtest.sh script from mmm4m5m for read transfer rate measurement (thanks lprot for measurement hint)
    * ADD: storing rootfs and lginit backups at installation into /home/backup/{rootfs,lginit}.bck files
    * ADD: web proxy script for JavaScript code injection to improve Internet Browser (work in progress)
    * CHANGE: /etc/rc.d/rc.mount rewrite for more flexible partitions handling