@@ -270,9 +270,9 @@ then
     mount -t squashfs /dev/mtdblock$mtd_story /mnt/preloaded/kids/story                 2>&1 | tee -a /tmp/OpenLGTV_BCM.log
 fi
 
-if [ -n "`grep appxip_addr /proc/cmdline`" ]
+appxip_addr=`cat /proc/cmdline | sed 's/ /\n/g' | grep appxip_addr | cut -d= -f 2`
+if [ -n "`grep appxip_addr /proc/cmdline`" -a "${appxip_addr}" != "0x0" -a "`devmem ${appxip_addr} 32`" = "0x28CD3D45" -a "`devmem $((${appxip_addr}+0x10)) 64`" = "0x73736572706D6F43" ]
 then
-    appxip_addr=`cat /proc/cmdline | sed 's/ /\n/g' | grep appxip_addr | cut -d= -f 2`
     echo "OpenLGTV_BCM-INFO: lgapp - mounting LGAPP partition as XIP CRAMFS, memory address: $appxip_addr" | tee -a /tmp/OpenLGTV_BCM.log
     #mount -t cramfs lgapp_xip /mnt/lg/lgapp -o physaddr=0x2600000
     mount -t cramfs lgapp_xip /mnt/lg/lgapp -o physaddr=$appxip_addr                    2>&1 | tee -a /tmp/OpenLGTV_BCM.log
@@ -281,9 +281,9 @@ else
     mount -t squashfs /dev/mtdblock$mtd_lgapp /mnt/lg/lgapp                             2>&1 | tee -a /tmp/OpenLGTV_BCM.log
 fi
 
-if [ -n "`grep fontxip_addr /proc/cmdline`" ]
+fontxip_addr=`cat /proc/cmdline | sed 's/ /\n/g' | grep fontxip_addr | cut -d= -f 2`
+if [ -n "`grep fontxip_addr /proc/cmdline`" -a "${fontxip_addr}" != "0x0" -a "`devmem ${fontxip_addr} 32`" = "0x28CD3D45" -a "`devmem $((${fontxip_addr}+0x10)) 64`" = "0x73736572706D6F43" ]
 then
-    fontxip_addr=`cat /proc/cmdline | sed 's/ /\n/g' | grep fontxip_addr | cut -d= -f 2`
     echo "OpenLGTV_BCM-INFO: lgfont - mounting LGFONT partition as XIP CRAMFS, memory address: $fontxip_addr" | tee -a /tmp/OpenLGTV_BCM.log
     mount -t cramfs lgfont_xip /mnt/lg/res/lgfont -o physaddr=$fontxip_addr  2>&1 | tee -a /tmp/OpenLGTV_BCM.log
 else
